--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html916"
+<A NAME="tex2html918"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html910"
+<A NAME="tex2html912"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html904"
+<A NAME="tex2html906"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html912"
+<A NAME="tex2html914"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html914"
+<A NAME="tex2html916"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html917"
+<B> Sig:</B> <A NAME="tex2html919"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html911"
+<B>Sup:</B> <A NAME="tex2html913"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html905"
+<B> Ant:</B> <A NAME="tex2html907"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html912"
+<A NAME="tex2html914"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html914"
+<A NAME="tex2html916"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,38 +103,42 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html918"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html919"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html920"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html921"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html922"
-  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html923"
-  HREF="node9.html#SECTION04120060000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html924"
-  HREF="node9.html#SECTION04120070000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html925"
-  HREF="node9.html#SECTION04120080000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
 <LI><A NAME="tex2html926"
-  HREF="node9.html#SECTION04120090000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION04120070000000000000">block versus Inline</A>
 <LI><A NAME="tex2html927"
-  HREF="node9.html#SECTION041200100000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION04120080000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html928"
-  HREF="node9.html#SECTION041200110000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION04120090000000000000">temperature.js</A>
 <LI><A NAME="tex2html929"
-  HREF="node9.html#SECTION041200120000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200100000000000000">Despliegue</A>
 <LI><A NAME="tex2html930"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200110000000000000">Mocha y Chai</A>
+<LI><A NAME="tex2html931"
+  HREF="node9.html#SECTION041200120000000000000">Pruebas: Estructura</A>
+<LI><A NAME="tex2html932"
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: <TT>index.html</TT></A>
+<LI><A NAME="tex2html933"
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html934"
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2607"></A>
+   <A NAME="2613"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -329,7 +333,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2612"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2614"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2618"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2620"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -380,25 +384,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2624"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2630"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2626"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2632"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2628"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2634"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2630"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2636"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2632"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2634"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2638"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2640"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -522,7 +526,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2640"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2646"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -580,7 +584,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2646"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2652"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -600,12 +604,12 @@ and
 <P>
 
 <H4><A NAME="SECTION04120060000000000000">
-Propiedades CSS</A>
+El Modelo de Caja</A>
 </H4>
   
 
 <P>
-The <A NAME="2652"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2658"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -614,7 +618,7 @@ The <A NAME="2652"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2654"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2660"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -625,7 +629,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2656"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2662"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -637,7 +641,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2658"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2664"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -649,7 +653,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html29"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2662"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2668"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -663,7 +667,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2666"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2672"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -686,6 +690,32 @@ The margin portion of an element exists outside the element.
 
 <P>
 
+<H4><A NAME="SECTION04120070000000000000">
+block versus Inline</A>
+</H4>
+  
+
+<P>
+HTML elements fall under two categories: <A NAME="2680"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2682"></A><SPAN  CLASS="textbf">inline</SPAN>.
+
+<P>
+
+<UL>
+<LI>Block-level elements include elements like <code>&lt;div&gt;</code>, <code>&lt;p&gt;</code>, and <code>&lt;section&gt;</code>.
+A block-level element is more of a structural, layout related element.
+</LI>
+<LI>An inline element only takes up as much width as necessary, and does not force line breaks.
+Inline elements include <code>&lt;span&gt;</code>, <code>&lt;b&gt;</code>, and <code>&lt;em&gt;</code>.
+</LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION04120080000000000000">
+Propiedades CSS</A>
+</H4>
+  
+
 <UL>
 <LI>The 
 <A NAME="tex2html30"
@@ -703,13 +733,14 @@ property specifies the horizontal alignment of text in an element.
 property specifies the font for an element.
 
 <P>
-The font-family property can hold several font names as a "fallback" system. If the browser does not support the first font, it tries the next font.
+The font-family property can hold several font names as a "fallback" system. 
+If the browser does not support the first font, it tries the next font.
 </LI>
 </UL>
 
 <P>
 
-<H4><A NAME="SECTION04120070000000000000">
+<H4><A NAME="SECTION04120090000000000000">
 temperature.js</A>
 </H4>
   
@@ -748,7 +779,7 @@ temperature.js</A>
 
 <P>
 
-<H4><A NAME="SECTION04120080000000000000">
+<H4><A NAME="SECTION041200100000000000000">
 Despliegue</A>
 </H4>
   
@@ -761,7 +792,7 @@ Vea la sección <I>GitHub Project Pages</I> <A HREF="node85.html#subsection:gith
 
 <P>
 
-<H4><A NAME="SECTION04120090000000000000">
+<H4><A NAME="SECTION041200110000000000000">
 Mocha y Chai</A>
 </H4>
   
@@ -785,7 +816,7 @@ helpers to perform all kinds of assertions against your JavaScript code.
 
 <P>
 
-<H4><A NAME="SECTION041200100000000000000">
+<H4><A NAME="SECTION041200120000000000000">
 Pruebas: Estructura</A>
 </H4>
   
@@ -861,7 +892,7 @@ el testing framework Mocha y  Chai en el repositorio
 
 <P>
 
-<H4><A NAME="SECTION041200110000000000000">
+<H4><A NAME="SECTION041200130000000000000">
 Pruebas: <TT>index.html</TT></A>
 </H4>
   
@@ -916,7 +947,7 @@ Modificamos <code>index.html</code> para
 
 <P>
 
-<H4><A NAME="SECTION041200120000000000000">
+<H4><A NAME="SECTION041200140000000000000">
 Pruebas: Añadir los tests</A>
 </H4>
   
@@ -961,7 +992,7 @@ suite('temperature', function() {
 
 <P>
 
-<H4><A NAME="SECTION041200130000000000000">
+<H4><A NAME="SECTION041200150000000000000">
 Pruebas: Véase</A>
 </H4>
   
@@ -983,19 +1014,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html916"
+<A NAME="tex2html918"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html910"
+<A NAME="tex2html912"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html904"
+<A NAME="tex2html906"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html912"
+<A NAME="tex2html914"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html914"
+<A NAME="tex2html916"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1035,11 +1066,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html917"
+<B> Sig:</B> <A NAME="tex2html919"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html911"
+<B>Sup:</B> <A NAME="tex2html913"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html905"
+<B> Ant:</B> <A NAME="tex2html907"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
