--- a/node9.html
+++ b/node9.html
@@ -701,8 +701,12 @@ HTML elements fall under two categories: <A NAME="2680"></A><SPAN  CLASS="textbf
 <P>
 
 <UL>
-<LI>Block-level elements include elements like <code>&lt;div&gt;</code>, <code>&lt;p&gt;</code>, and <code>&lt;section&gt;</code>.
+<LI>Block-level elements include elements like <code>&lt;div&gt;</code>, <code>&lt;p&gt;</code>, <code>h1</code>, <code>li</code>
+and <code>&lt;section&gt;</code>.
 A block-level element is more of a structural, layout related element.
+
+<P>
+A block element is an element that takes up the full width available, and has a line break before and after it.
 </LI>
 <LI>An inline element only takes up as much width as necessary, and does not force line breaks.
 Inline elements include <code>&lt;span&gt;</code>, <code>&lt;b&gt;</code>, and <code>&lt;em&gt;</code>.
