--- a/node9.html
+++ b/node9.html
@@ -709,9 +709,18 @@ A block-level element is more of a structural, layout related element.
 A block element is an element that takes up the full width available, and has a line break before and after it.
 </LI>
 <LI>An inline element only takes up as much width as necessary, and does not force line breaks.
+Inline elements behave like words and letters within of a paragraph.
 
 <P>
 Inline elements include <code>&lt;span&gt;</code>, <code>&lt;b&gt;</code>, and <code>&lt;em&gt;</code>.
+
+<P>
+It's worth noting that inline elements are subject to CSS properties that affect text. For example, <code>line-height</code> and <code>letter-spacing</code> are CSS properties that can be used to style inline elements.
+
+<P>
+However, those same properties wouldn't affect block elements.
+
+<P>
 </LI>
 <LI>See 
 <A NAME="tex2html30"
