--- a/node9.html
+++ b/node9.html
@@ -138,7 +138,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2615"></A>
+   <A NAME="2625"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -333,7 +333,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2620"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2622"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2630"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2632"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -384,25 +384,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2632"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2642"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2634"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2644"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2636"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2646"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2638"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2648"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2640"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2642"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2650"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2652"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -526,7 +526,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2648"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2658"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -584,7 +584,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2654"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2664"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -609,7 +609,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2660"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2670"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -618,7 +618,7 @@ The <A NAME="2660"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2662"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2672"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -629,7 +629,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2664"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2674"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -641,7 +641,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2666"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2676"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -653,7 +653,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html29"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2670"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2680"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -667,7 +667,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2674"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2684"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -689,6 +689,34 @@ The margin portion of an element exists outside the element.
 </UL>
 
 <P>
+<P>
+<DIV><B>Ejercicio  <SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
+<UL>
+<LI>Dadas las declaraciones:
+<PRE>
+.example {
+  border-style: dashed;
+  border-width: 2px;
+  border-color: blue;
+}
+.example {
+  border: solid;
+  color: green;
+}
+</PRE>
+¿De que color quedan los elementos de clase <code>example</code>? ¿Que <code>border-width</code> tendrán?
+</LI>
+<LI>Dada la declaración:
+<PRE>
+.example {
+  margin: 10px 20px;
+}
+</PRE>
+¿De que tamaño quedarán <code>border-bottom</code> y <code>border-left</code> para los elementos de clase <code>example</code>?
+</LI>
+</UL></DIV><P></P>
+
+<P>
 
 <H4><A NAME="SECTION04120070000000000000">
 block versus Inline</A>
@@ -696,7 +724,7 @@ block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2682"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2684"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2692"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2694"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
