--- a/node9.html
+++ b/node9.html
@@ -704,7 +704,9 @@ The margin portion of an element exists outside the element.
   color: green;
 }
 </PRE>
-¿De que color queda el borde de los elementos de clase <code>example</code>? ¿Que <code>border-width</code> tendrán?
+¿De que color queda el borde de los elementos de clase <code>example</code>? 
+¿Que <code>border-style</code> tendrán?
+¿Que <code>border-width</code> tendrán?
 </LI>
 <LI>Dada la declaración:
 <PRE>
