--- a/node9.html
+++ b/node9.html
@@ -707,6 +707,11 @@ The margin portion of an element exists outside the element.
 ¿De que color queda el borde de los elementos de clase <code>example</code>? 
 ¿Que <code>border-style</code> tendrán?
 ¿Que <code>border-width</code> tendrán?
+
+<P>
+
+<iframe width="100%" height="300" src="http://jsfiddle.net/casiano/g7qLj8ps/2/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
 </LI>
 <LI>Dada la declaración:
 <PRE>
