--- a/node9.html
+++ b/node9.html
@@ -719,7 +719,7 @@ The margin portion of an element exists outside the element.
   margin: 10px 20px;
 }
 </PRE>
-¿De que tamaño quedarán <code>border-bottom</code> y <code>border-left</code> para los elementos de clase <code>example</code>?
+¿De que tamaño quedarán <code>margin-bottom</code> y <code>margin-left</code> para los elementos de clase <code>example</code>?
 </LI>
 </UL></DIV><P></P>
 
