--- a/node9.html
+++ b/node9.html
@@ -729,6 +729,9 @@ Editing CSS styles in Chrome using various DevTools aid</A>
 
 <P>
 See 
+<A NAME="tex2html30"
+  HREF="https://developer.chrome.com/devtools/docs/elements-styles">Editing styles</A>
+in Chrome developer pages.
 
 <P>
 
@@ -1137,7 +1140,7 @@ by Nicolas Perriault
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-02-01</I>
+2015-02-02</I>
 </ADDRESS>
 </BODY>
 </HTML>
